Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,16 @@
 
 html {
-    background: url('images/rainy_leaf.jpg') no-repeat center center fixed;
+    background: url('images/rainy_leaf.jpg'); 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+
+    height: 100%;
 
 }
 
